Fixed broken glyphicons in shelob.
The tooltips appear a bit off-center, which seems to be nontrivial
to fix. This part of the UI is going to get overhauled alongside the
SF changes soon, though, so I'm inclined to Just Fix It.

--- a/src/web/web/static/shelob/css/shelob.css
+++ b/src/web/web/static/shelob/css/shelob.css
@@ -38,18 +38,16 @@ a.action {
     padding-left: 28px;
     float: right;
 }
-a.action.glyphicons:before {
+a.action.glyphicon {
     color: #888;
+    display: inline-block;
+    font-size: 1.6em;
+    margin-left: -30px;
+    padding-right: 10px;
 }
-a.action.action-manage {
-    margin-top: 2px;
-}
-a.action.action-move {
-    margin-top: 2px;
-}
-a.action.action-delete {
-    margin-top: 4px;
-    margin-left: -4px;
+a.action.glyphicon:hover {
+    color: #222;
+    text-decoration: none;
 }
 .waiting, .waiting * {
     cursor: wait;
